Implement Full Site Localization

--- a/lang/de.json
+++ b/lang/de.json
@@ -32,5 +32,76 @@
     "Owner Pay ($)": "Unternehmergehalt ($)",
     "Tax ($)": "Steuern ($)",
     "Operating Expenses ($)": "Betriebskosten ($)",
-    "Run Analysis": "Analyse durchführen"
+    "Run Analysis": "Analyse durchführen",
+    "Analyses": "Analysen",
+    "Industries": "Branchen",
+    "Profile": "Profil",
+    "Log Out": "Abmelden",
+    "Financial Health Dashboard": "Finanzielles Gesundheits-Dashboard",
+    "Welcome to Profit First! 🚀": "Willkommen bei Profit First! 🚀",
+    "You haven't run any analyses yet. Start your first financial checkup now.": "Sie haben noch keine Analysen durchgeführt. Starten Sie jetzt Ihren ersten Finanzcheck.",
+    "Start New Analysis": "Neue Analyse starten",
+    "AI Financial Advisor": "KI-Finanzberater",
+    "Total Revenue Analyzed": "Analysierter Gesamtumsatz",
+    "Latest Profit Margin": "Aktuelle Gewinnmarge",
+    "Profit Trend (Actual vs Target)": "Gewinntrend (Ist vs. Soll)",
+    "Target Profit ($)": "Zielgewinn ($)",
+    "+ New Analysis": "+ Neue Analyse",
+    "Latest:": "Zuletzt:",
+    "Target: Varies by Industry": "Ziel: Variiert nach Branche",
+    "Your Analyses": "Ihre Analysen",
+    "New Analysis": "Neue Analyse",
+    "No analyses found. Start one!": "Keine Analysen gefunden. Starten Sie eine!",
+    "Analysis #": "Analyse #",
+    "Revenue:": "Umsatz:",
+    "View Results": "Ergebnisse anzeigen",
+    "Profit First Analysis Results": "Profit First Analyseergebnisse",
+    "Download PDF Report": "PDF-Bericht herunterladen",
+    "Details": "Details",
+    "Real Revenue:": "Realer Umsatz:",
+    "Date:": "Datum:",
+    "Category": "Kategorie",
+    "Actual": "Ist",
+    "TAPS %": "TAPS %",
+    "PF $": "PF $",
+    "The Bleed": "Der Verlust (Bleed)",
+    "The Fix": "Die Korrektur (Fix)",
+    "HAPS %": "HAPS %",
+    "Q4 CAPS": "Q4 CAPS",
+    "Actual vs Target (TAPS)": "Ist vs. Soll (TAPS)",
+    "Annual Summary": "Jahreszusammenfassung",
+    "Total Allocation:": "Gesamtzuweisung:",
+    "Money Moves (The Fix)": "Geldanalysen (Die Korrektur)",
+    "by": "um",
+    "(Allocated too little)": "(Zu wenig zugewiesen)",
+    "(Spent too much / Allocated too much)": "(Zu viel ausgegeben / Zu viel zugewiesen)",
+    "Start New Analysis &rarr;": "Neue Analyse starten &rarr;",
+    "Target (PF $)": "Ziel (PF $)",
+    "Manage Industries (TAPS)": "Branchen verwalten (TAPS)",
+    "Add Custom Industry": "Benutzerdefinierte Branche hinzufügen",
+    "My Custom Industries": "Meine benutzerdefinierten Branchen",
+    "You haven't created any custom industries yet.": "Sie haben noch keine benutzerdefinierten Branchen erstellt.",
+    "Industry": "Branche",
+    "Profit %": "Gewinn %",
+    "Owner Pay %": "Unternehmergehalt %",
+    "Tax %": "Steuer %",
+    "OPEX %": "Betriebskosten %",
+    "Actions": "Aktionen",
+    "Delete": "Löschen",
+    "Are you sure?": "Sind Sie sicher?",
+    "System Defaults (Read Only)": "Systemstandards (Schreibgeschützt)",
+    "Create Custom Industry": "Benutzerdefinierte Branche erstellen",
+    "Industry Name": "Branchenname",
+    "Profit Target (%)": "Gewinnziel (%)",
+    "Owner Pay Target (%)": "Unternehmergehalt-Ziel (%)",
+    "Tax Target (%)": "Steuerziel (%)",
+    "OPEX Target (%)": "Betriebskostenziel (%)",
+    "Save Industry": "Branche speichern",
+    "Cancel": "Abbrechen",
+    "Profile Information": "Profilinformationen",
+    "Update Password": "Passwort aktualisieren",
+    "Delete Account": "Konto löschen",
+    "Ensure your account is using a long, random password to stay secure.": "Stellen Sie sicher, dass Ihr Konto ein langes, zufälliges Passwort verwendet, um sicher zu bleiben.",
+    "Update your account's profile information and email address.": "Aktualisieren Sie die Profilinformationen und die E-Mail-Adresse Ihres Kontos.",
+    "Once your account is deleted, all of its resources and data will be permanently deleted.": "Sobald Ihr Konto gelöscht ist, werden alle seine Ressourcen und Daten dauerhaft gelöscht."
 }
