Fix German translations for Analysis page

--- a/lang/de.json
+++ b/lang/de.json
@@ -104,5 +104,15 @@
     "Ensure your account is using a long, random password to stay secure.": "Stellen Sie sicher, dass Ihr Konto ein langes, zufälliges Passwort verwendet, um sicher zu bleiben.",
     "Update your account's profile information and email address.": "Aktualisieren Sie die Profilinformationen und die E-Mail-Adresse Ihres Kontos.",
     "Once your account is deleted, all of its resources and data will be permanently deleted.": "Sobald Ihr Konto gelöscht ist, werden alle seine Ressourcen und Daten dauerhaft gelöscht.",
-    "Language": "Sprache"
+    "Language": "Sprache",
+    "Profit": "Gewinn",
+    "Owner Pay": "Unternehmerlohn",
+    "Tax": "Steuern",
+    "Operating Expenses": "Betriebskosten",
+    "Increase": "Erhöhen",
+    "Decrease": "Verringern",
+    "On Track": "Im Plan",
+    "Q1 CAPS": "Q1 CAPS",
+    "Q2 CAPS": "Q2 CAPS",
+    "Q3 CAPS": "Q3 CAPS"
 }
