Fix de.json syntax and duplicates

--- a/lang/de.json
+++ b/lang/de.json
@@ -118,6 +118,9 @@
     "Analysis Details": "Analyse-Details",
     "Q1 2026 Data": "Q1 2026 Daten",
     "Target Overview": "Zielübersicht",
+    "Client / Department Name": "Kunde / Abteilung",
+    "Revenue Data": "Umsatzdaten",
+    "Enter revenue for 10th and 25th of each month.": "Geben Sie den Umsatz für den 10. und 25. jedes Monats ein.",
     "Save Changes": "Änderungen speichern",
     "Saving...": "Wird gespeichert...",
     "Print View": "Druckansicht",
