Rename Profit First Analysis to Allocore Financial Analysis

--- a/lang/de.json
+++ b/lang/de.json
@@ -3,9 +3,9 @@
     "Register": "Registrieren",
     "Dashboard": "Dashboard",
     "Master Your Business Finances": "Meistern Sie Ihre Unternehmensfinanzen",
-    "Empowering business growth with Profit First.": "Stärkung des Geschäftswachstums mit Profit First.",
+    "Empowering business growth with Profit First.": "Stärkung des Geschäftswachstums mit Allocore Finanzanalyse.",
     "Read more": "Mehr lesen",
-    "Take control of your cash flow with our advanced analytics and simulation tools. Implement the Profit First methodology to ensure your business stays healthy and profitable.": "Übernehmen Sie die Kontrolle über Ihren Cashflow mit unseren fortschrittlichen Analyse- und Simulationstools. Implementieren Sie die Profit-First-Methodik, um sicherzustellen, dass Ihr Unternehmen gesund und profitabel bleibt.",
+    "Take control of your cash flow with our advanced analytics and simulation tools. Implement the Profit First methodology to ensure your business stays healthy and profitable.": "Übernehmen Sie die Kontrolle über Ihren Cashflow mit unseren fortschrittlichen Analyse- und Simulationstools. Implementieren Sie die Allocore Finanzanalyse-Methodik, um sicherzustellen, dass Ihr Unternehmen gesund und profitabel bleibt.",
     "Get started": "Loslegen",
     "Live demo": "Live-Demo",
     "Deploy faster": "Schneller bereitstellen",
@@ -24,7 +24,8 @@
     "Projected OPEX:": "Prognostizierte OPEX:",
     "Analysis:": "Analyse:",
     "Current vs Projected Profit": "Aktueller vs. Prognostizierter Gewinn",
-    "New Profit First Analysis": "Neue Profit First Analyse",
+    "New Profit First Analysis": "Neue Allocore Finanzanalyse",
+    "New Allocore Financial Analysis": "Neue Allocore Finanzanalyse",
     "Real Revenue ($)": "Echter Umsatz ($)",
     "Select Industry (TAPS)": "Branche auswählen (TAPS)",
     "Actual Numbers (Current Status)": "Aktuelle Zahlen (Status Quo)",
@@ -38,7 +39,7 @@
     "Profile": "Profil",
     "Log Out": "Abmelden",
     "Financial Health Dashboard": "Finanzielles Gesundheits-Dashboard",
-    "Welcome to Profit First! 🚀": "Willkommen bei Profit First! 🚀",
+    "Welcome to Profit First! 🚀": "Willkommen bei Allocore Finanzanalyse! 🚀",
     "You haven't run any analyses yet. Start your first financial checkup now.": "Sie haben noch keine Analysen durchgeführt. Starten Sie jetzt Ihren ersten Finanzcheck.",
     "Start New Analysis": "Neue Analyse starten",
     "AI Financial Advisor": "KI-Finanzberater",
@@ -55,7 +56,8 @@
     "Analysis #": "Analyse #",
     "Revenue:": "Umsatz:",
     "View Results": "Ergebnisse anzeigen",
-    "Profit First Analysis Results": "Profit First Analyseergebnisse",
+    "Profit First Analysis Results": "Allocore Finanzanalyse Ergebnisse",
+    "Allocore Financial Analysis Results": "Allocore Finanzanalyse Ergebnisse",
     "Download PDF Report": "PDF-Bericht herunterladen",
     "Details": "Details",
     "Real Revenue:": "Realer Umsatz:",
